--- a/Styles/project.css
+++ b/Styles/project.css
@@ -1,7 +1,52 @@
+:root{
+    --branding-color:#6C63FF;
+    --secondary-color:#F9F7FE;
+    --heading-font-family:"Playfair Display", serif;
+    --default-font-family:"Poppins", sans-serif;
+}
 body {
-    background: red;
+    font-family:var(--default-font-family);
+}
+h1,h2,h3,h4,h5,h6 {
+    font-family: var(--heading-font-family);
+    font-weight: bold;
+    color:black;
+}
+
+p {
+    font-family: var(--default-font-family);
+    color: #272142;
+    font-weight:normal;
+}
+
+.hero {
+    background: var(--secondary-color);
+    text-align:center;
+    padding:160px 20px;
+}
+
+.hero p {
+    font-size:36px;
+    font-weight: bold;
+    margin:0;
 }
 
 h1 {
-    font-family: poppins;
+    font-size: 96px;
+}
+
+.hero h2 {
+    font-family: var(--default-font-family);
+    font-weight: normal;
+    font-size:24px;
+    line-height: 2px;
+}
+
+.btn-branding {
+    background-color: var(--branding-color);
+    border-radius: 4px;
+    color:white;
+    font-size:18px;
+    line-height: 27px;
+    padding:15px 30px;
 }
