--- a/Styles/project.css
+++ b/Styles/project.css
@@ -17,6 +17,7 @@ p {
     font-family: var(--default-font-family);
     color: #272142;
     font-weight:normal;
+    font-size:16px;
 }
 
 .hero {
@@ -35,6 +36,10 @@ h1 {
     font-size: 96px;
 }
 
+h2 {
+    font-size:64px;
+}
+
 .hero h2 {
     font-family: var(--default-font-family);
     font-weight: normal;
@@ -46,6 +51,14 @@ h1 {
     background-color: var(--branding-color);
     border-radius: 4px;
     color:white;
+    font-size:18px;
+    line-height: 27px;
+    padding:15px 30px;
+}
+
+.btn-branding-outline {
+    border-radius: 1px solid var(--branding-color);
+    color: var(--secondary-color);
     font-size:18px;
     line-height: 27px;
     padding:15px 30px;
