--- a/Styles/project.css
+++ b/Styles/project.css
@@ -1,65 +1,99 @@
-:root{
-    --branding-color:#6C63FF;
-    --secondary-color:#F9F7FE;
-    --heading-font-family:"Playfair Display", serif;
-    --default-font-family:"Poppins", sans-serif;
-}
-body {
-    font-family:var(--default-font-family);
-}
-h1,h2,h3,h4,h5,h6 {
+:root {
+    --branding-color: #6c63ff;
+    --secondary-color: #f9f7fe;
+    --heading-font-family: "Playfair Display", serif;
+    --default-font-family: "Poppins", sans-serif;
+  }
+  
+  body {
+    font-family: var(--default-font-family);
+  }
+  
+  h1,
+  h2,
+  h3,
+  h4,
+  h5,
+  h6 {
+    color: black;
     font-family: var(--heading-font-family);
     font-weight: bold;
-    color:black;
-}
-
-p {
-    font-family: var(--default-font-family);
-    color: #272142;
-    font-weight:normal;
-    font-size:16px;
-}
-
-.hero {
-    background: var(--secondary-color);
-    text-align:center;
-    padding:160px 20px;
-}
-
-.hero p {
-    font-size:36px;
-    font-weight: bold;
-    margin:0;
-}
-
-h1 {
+  }
+  
+  h1 {
     font-size: 96px;
-}
-
-h2 {
-    font-size:64px;
-}
-
-.hero h2 {
-    font-family: var(--default-font-family);
+    line-height: 1.5;
+  }
+  
+  h2 {
+    font-size: 64px;
+  }
+  
+  p {
     font-weight: normal;
-    font-size:24px;
-    line-height: 2px;
-}
-
-.btn-branding {
-    background-color: var(--branding-color);
+    font-size: 16px;
+    line-height: 30px;
+  }
+  
+  .hero {
+    background: var(--secondary-color);
+    text-align: center;
+    padding: 160px 20px;
+  }
+  
+  .hero p {
+    font-size: 36px;
+    font-weight: bold;
+    margin: 0;
+    color: #272142;
+  }
+  
+  .hero h2 {
+    font-family: var(--heading-font-family);
+    font-weight: normal;
+    line-height: 1.5;
+    font-size: 24px;
+  }
+  
+  .btn-branding {
+    background: var(--branding-color);
     border-radius: 4px;
-    color:white;
-    font-size:18px;
+    color: white;
+    font-size: 18px;
     line-height: 27px;
-    padding:15px 30px;
-}
-
-.btn-branding-outline {
-    border-radius: 1px solid var(--branding-color);
-    color: var(--secondary-color);
-    font-size:18px;
+    padding: 15px 30px;
+  }
+  
+  .btn-branding-outline {
+    color: var(--branding-color);
+    border: 1px solid var(--branding-color);
+    border-radius: 4px;
+    font-size: 18px;
     line-height: 27px;
-    padding:15px 30px;
-}
+    padding: 15px 30px;
+  }
+  
+  .project-desciption {
+    padding: 120px 60px;
+  }
+  
+  @media (max-width: 900px) {
+    h1 {
+      font-size: 44px;
+      line-height: 2;
+    }
+  
+    h2 {
+      font-size: 44px;
+    }
+  
+    .hero {
+      padding: 80px 20px;
+    }
+  
+    .project-desciption {
+      padding: 0;
+      text-align: center;
+    }
+  }
+  
