--- a/Styles/project.css
+++ b/Styles/project.css
@@ -63,6 +63,30 @@
     line-height: 27px;
     padding: 15px 30px;
   }
+
+  .about h1 {
+    font-size:64px;
+    line-height:80px;
+  }
+
+  .about h2 {
+    font-size:18px;
+    font-family:var(--default-font-family);
+  }
+
+  .about {
+    padding: 160px 20px;
+  }
+
+  .about-content {
+    margin:30px;
+  }
+
+  .about {
+    text-align:center;
+    padding:0;
+  }
+
   
   .btn-branding-outline {
     color: var(--branding-color);
