--- a/Styles/project.css
+++ b/Styles/project.css
@@ -64,25 +64,25 @@
     padding: 15px 30px;
   }
 
-  .about h1 {
+  .content-container h1 {
     font-size:64px;
     line-height:80px;
   }
 
-  .about h2 {
+  .content-container h2 {
     font-size:18px;
     font-family:var(--default-font-family);
   }
 
-  .about {
+  .content-container {
     padding: 160px 20px;
   }
 
-  .about-content {
+  content {
     margin:30px;
   }
 
-  .about {
+  .content-container {
     text-align:center;
     padding:0;
   }
