--- a/Styles/project.css
+++ b/Styles/project.css
@@ -74,6 +74,39 @@
     font-family:var(--default-font-family);
   }
 
+  .logo {
+    max-height: 40px;
+  }
+  nav li {
+    display: inline;
+    list-style:none;
+    line-height:42px;
+  }
+
+  nav ul {
+    padding:0;
+    margin:0;
+  }
+
+  nav li.active a {
+    color:var(--branding-color);
+  }
+
+  nav a {
+    margin-left: 15px;
+    text-decoration: none;
+    color:#272142;
+    transition: all 150ms ease-in-out;
+  }
+
+  nav a:hover {
+    color: var(--branding-color);
+  }
+
+  nav {
+    padding:20px 0;
+  }
+
   .content-container {
     padding: 160px 20px;
   }
