--- a/Styles/project.css
+++ b/Styles/project.css
@@ -28,6 +28,10 @@
   h2 {
     font-size: 64px;
   }
+
+  h4 {
+    font-size:48px;
+  }
   
   p {
     font-weight: normal;
@@ -120,6 +124,30 @@
     padding:0;
   }
 
+  footer .email-link {
+    text-decoration: none;
+    color:black;
+    font-size: 24px;
+  }
+
+  footer {
+    margin:60px 0;
+  }
+
+  footer .social-links a {
+    margin:0 20px;
+    color:var(--branding-color);
+    background-color: var(--secondary-color);
+    padding:10px 14px;
+    font-size:18px;
+    border-radius:50%;
+    transition: all 100ms ease-in-out;
+  }
+
+  footer .social-links a:hover {
+    color:white;
+    background-color: var(--branding-color);
+  }
   
   .btn-branding-outline {
     color: var(--branding-color);
@@ -128,6 +156,16 @@
     font-size: 18px;
     line-height: 27px;
     padding: 15px 30px;
+  }
+
+  footer .contact-box{
+    background-color: var(--secondary-color);
+    padding:30px;
+    border-radius:10px;
+  }
+
+  footer .contact-box p{
+    padding:0;
   }
   
   .project-desciption {
